static/css/styles.css
/* colors */
:root {
    /*Primary Color is Teal Blue */
    --primary: #12ECCB;
    --primary-dark: #00D9B1;

    --white: #fff;
    --gray: rgba(83, 91, 97, 0.32);
    --gary-dark: #343a40;
    --gray-light: #535B61;
    --gray-lighter: #727980;
    --gray-lightest: #90959a;
    --black: #000;

    --warning: #EC4646;
    --link: #007BFF;
    --gold: #fc0;
    --gold-dark: #FF8C1C;

    --trophy-size: 30px;
    --trophy-color: #92a9bf;
    --trophy-background: #fc0;
}


/* smooth scrolling */
html {
    scroll-behavior: smooth;
}

/* space out forms */
form {
    margin: 10px 0;
}

/* empty form display */
span.empty-form {
    border-bottom: 1px solid black;
    min-width: 100px;
    display: inline-block;
}

/* overwrite styles for base fonts */
body {
    font-family: Exo, Arial, sans-serif;
    font-size: 18px;
    font-weight: 500;
}

/* overwrite fonts for headings and navigation */
h1, h2, h3, h4, h5, h6, a.navbar-brand, a.nav-link {
    font-family: 'Orbitron', Tahoma, serif;
    font-size: 18px;
}

h1 {
    font-size: 24px;
}

h2 {
    font-size: 20px;
}

h4 {
    font-size: 1.2rem;
    margin: 15px 0 10px;
}

span.norm-font {
    font-family: Exo, Arial, sans-serif;
}

.textarea {
    max-height: 150px;
}

/* force long links from file uploads to word wrap */
a {
    word-wrap: break-word;
}

/* override navigation colors */
.navbar-dark .navbar-nav .nav-link:hover {
    color: var(--primary-dark);
}

.navbar-dark .navbar-nav .nav-link {
    color: var(--primary);
}

.navbar-dark .navbar-nav .show > .nav-link {
    color: var(--gary-dark);
}

.navbar-dark .navbar-nav .show > .dropdown-toggle.nav-link {
    color: var(--primary-dark);
}

.dropdown-item:focus, .dropdown-item:hover {
    color: var(--gray)
}

/* add padding between navigation icons */
.nav-image {
    margin: 0 10px;
}

/* navigation icons */
a.nav-link i {
    font-size: 20px;
    margin: 0 10px;
}

/* outline video and audio as some browser's don't do that automatically */
video, audio {
    margin: 0 auto;
	border: 1px solid #92a9bf;
    max-height: 100%;
    max-width: 100%;
}

/* outline

/* set fonts buttons and inputs */
button, input, select, textarea, a.btn, input.btn {
    font-family: Exo, Arial, sans-serif;
    font-size: 16px;
    font-weight: 500;
    line-height: 24px;
    padding: .375rem .25rem;
}

input[type=checkbox] {
    padding: 0;
}

/* buttons colors */
button.btn, input.btn, a.btn {
    font-weight: 700;
    background: var(--primary);
    text-transform: uppercase;
    border: none;
    color: var(--black);
    cursor: pointer;
}

input[type=file] {
    font-size: 16px;
    font-family: Exo, Arial, sans-serif;
    font-weight: 500;
    line-height: 24px;
    border-radius: 4px;
    cursor: pointer;
}

/* buttons hover */
button.btn-default:hover, input.btn-primary:hover, a.btn {
    color: var(--gary-dark);
    background: var(--primary-dark);
}

a.btn-cancel, button.btn-cancel, input.btn-cancel, a.btn.btn-cancel {
    background: var(--gray-lightest);
}

a.btn-cancel:hover, button.btn-cancel:hover, input.btn-cancel:hover, a.btn.btn-cancel:hover {
    background: #92a9bf;
}

a.is-disabled {
    pointer-events: all;
    cursor: not-allowed;
}

/* add background color to rails on desktop + renderings */
html {
    background-color: hsl(0, 0%, 86%)
}

/* have rails appear for larger devices so that content and inputs don't get too wide */
body, nav, footer {
    max-width: 1240px;
    margin-left: auto;
    margin-right: auto;
    background-color: var(--white);
}

/* make social footer icons get bigger and tilt if hoavered */
.social a:hover i {
    transform: rotate(-3deg) scale(1.3);
    color: var(--primary);
}

/* tooltips */
a[data-toggle=tooltip] {
    color: #26d3ea;
}

.tooltip.show {
    opacity: 1;
}

/* grid */

.full {
    grid-column: 1 / span 2;
}

/* profile */
.profile-pic {
    width: auto;
    height: auto;
    max-width: 200px;
    max-height: 200px;
    margin: 0 auto;
    border-radius: 50%;
}

/* outline */
.profile-outline {
    padding: .5rem;
    background-color: #fff;
    background-clip: border-box;
    border: 1px solid rgba(0, 0, 0, .125);
    border-radius: .25rem;
    margin: 0.5rem;
}

.table td, .table th {
    padding: .2rem;
    font-size: 14px;
}

/* product imagery Common to Checkout and Product page so not making separate file */
.product-img-wrap {
    height: 150px;
    width: 150px;
    margin: 20px auto;
}

.product-img-wrap.checkout {
    display: none;
}

.ch-img-wrap img {
    width: 100%;
    max-height: 100%;
}

/* purchase buttons */
.card-footer .input-group-btn, .card-footer .btn {
    width: 100%;
    text-align: center;
}

/* card-deck, keep block longer than bootstrap */
.card-deck {
    display: block;
    margin-right: 0;
    margin-left: 0;
}

.card-deck .card {
    margin: 15px 0;
    flex: none
}

/* price formatting */
.card-text.price {
    font-family: 'Orbitron', Tahoma, serif;
    font-size: 24px;
    font-weight: 700;
    text-align: center;
    color: var(--link);
}

.card-text.price.checkout {
    text-align: left;
    margin-left: 20px;
}

.price .dollar-symbol {
    top: -10px;
    position: relative;
}

.price .dollars {
    font-size: 38px;
}

/* footer */
.footer {
    display: block;
    flex-direction: unset;
    font-size: 1rem;
    color: var(--white);
    line-height: 1.75;
    padding: .25em .75em;
}

/* footer links */
.footer a {
    color: var(--primary);
}

/* footer spacing */
footer p {
    margin: .3rem 0;
}

/* footer icons */
.footer a i {
    padding: .25em 1.25em;
}

/* footer icon distancing*/
.dist-even {
    text-align: left;
    display: block;
    line-height: 1.75;
    padding: .5em .75em;
    position: relative;
    justify-content: space-between;
}

/* main-content height fills page */
.main-content {
    min-height: calc(100vh - 13rem);
}

/* make label stand out more */
label.control-label, .form-group label, .label {
    font-weight: 800;
    color: var(--black);
}

/* put a colon after a label */
label.control-label::after, .form-group label:after {
    content: ':';
    position: relative;
}

/* no colon for checkbox groups */
.form-group .checkbox_select_multiple label::after {
    content: '';
}

/* custom checkbox */
.checkbox_select_multiple {
    margin-left: 20px;
}

.checkbox_select_multiple input[type=checkbox] {
    height: 12px;
    width: auto;
    position: relative;
    margin-right: 27px;
    border-radius: 0;
    cursor: pointer;
    border: 0;
    font-size: 0;
}

.checkbox_select_multiple input[type=checkbox]:before {
    font-family: FontAwesome;
    font-style: normal;
    text-align: center;
    position: absolute;
    top: -9px;
    cursor: pointer;
    display: block;
    content: "\f00c";
    line-height: 24px;
    width: 24px;
    height: 24px;
    font-size: 1.1rem;
    border-radius: 4px;
    background-color: #fff;
    border: 1px solid var(--gray);
    color: #fff;
}

.checkbox_select_multiple input[type=checkbox]:checked:before {
    color: var(--primary);
}

.checkbox_select_multiple label:hover, .checkbox_select_multiple:hover {
    cursor: pointer;
}

/* trophies */

.trophies {
    --percent: calc(var(--rating) / 3 * 100%);
    display: inline-block;
    font-size: var(--trophy-size);
    font-family: FontAwesome;
/ / make sure trophy appears correctly line-height: 1;
}

.trophies::before {
    content: '\f091\f091\f091';
    letter-spacing: 3px;
    background: linear-gradient(90deg, var(--trophy-background) var(--percent), var(--trophy-color) var(--percent));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}


/* add margin to page-heading */
.page-heading {
    margin-top: 10px;
}

.center {
    text-align: center;
}


/* TABLET STYLES */
@media screen and (min-width: 768px) {
    /* card-deck */
    .card-deck {
        display: -ms-flexbox;
        display: flex;
        -ms-flex-flow: row wrap;
        flex-flow: row wrap;
        margin-right: -15px;
        margin-left: -15px;
    }

    .card-deck .card {
        -ms-flex: 1 0 0%;
        flex: 1 0 0%;
        margin-right: 10px;
        margin-bottom: 0;
        margin-left: 10px;
    }

    /* outline */
    .profile-outline {
        padding: 1.25rem;
    }

    button, input, select, textarea, a.btn, input.btn {
        padding: .375rem .5rem;
    }

    a#add_member.btn{
        padding: .375rem .2rem;
    }

    .table td, .table th {
        padding: .75rem;
        font-size: 18px;
    }

    .container-fluid.rocket {
        display: flex;
        flex: 1;
    }

    /* size links and headers */
    h1, h2, h3, h4, h5, h6, a.navbar-brand, a.nav-link {
        font-size: 31px;
    }

    h2 {
        font-size: 30px;
    }

    h3 {
        font-size: 28px;
    }

    h4 {
        font-size: 26px;
    }

    h5 {
        font-size: 24px;
    }

    .footer a i {
        padding: .25em 1.5em;
    }

    a.dropdown-item.nav-link {
        font-size: 22px;
    }

    /* nav */
    .navbar-dark .navbar-nav .show > a.dropdown-item.nav-link:hover {
        color: var(--link);
        background: var(--gray);
    }

    /* grid displays */
    .full {
        grid-column: 1 / span 4;
    }

    .triple {
        grid-column: 2 / span 3;
    }

    .double {
        grid-column: 2 / span 2;
    }

    /* main-content height fills page */
    .main-content {
        min-height: calc(100vh - 11.5rem);
    }

    /* checkout only show image on larger devices */
    .product-img-wrap.checkout {
        display: inline-block;
    }

    /* limit image height for desktop challenge entry/update form */
    .challenge_entry img, .challenge_wrap.entry img {
        max-height: 150px;
    }

}

/* DESKTOP STYLES */
/* desktop and larger styles */
@media screen and (min-width: 1024px) {
  button, input, select, textarea, a.btn, input.btn {
        padding: .375rem 1rem;
    }
    a#add_member.btn{
        padding: .375rem .5rem;
    }
}

